fixing bug when its executed inside of images folder

--- a/test/images/v2-v1-diff.html
+++ b/test/images/v2-v1-diff.html
@@ -31,7 +31,7 @@
 
 
 <footer>
-	<p>The <a href="https://github.com/igorescobar/automated-screenshot-diff">automated-screenshot-diff</a> was written by <a href="http://www.igorescobar.com/" rel="author" target="_blank">Igor Escobar</a> and the source-code's available at <a href="https://github.com/igorescobar/automated-screenshot-diff" target="_blank">GitHub</a>.</p>
+	<p>The <a href="https://github.com/igorescobar/automated-screenshot-diff">automated-screenshot-diff</a> was written by <a href="http://www.igorescobar.com/" rel="author" target="_blank">Igor Escobar</a> and the source-code is available at <a href="https://github.com/igorescobar/automated-screenshot-diff" target="_blank">GitHub</a>.</p>
 </footer>
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet" type="text/css">
